Exibindo ingredientes da lista mockada

--- a/ngrx-shopping-list/src/app/app.component.html
+++ b/ngrx-shopping-list/src/app/app.component.html
@@ -6,6 +6,7 @@
     </div>
 
     <div class="col-12">
-      <app-shopping-list></app-shopping-list>
+      <app-shopping-list
+      [ingredients]="ingredients"></app-shopping-list>
     </div>
 </div>
