--- a/ngrx-shopping-list/src/app/shopping-list/shopping-list.component.html
+++ b/ngrx-shopping-list/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let ingredient of ingredients">
-    <span class="badge">{{ ingredient.amount  }}</span>
+    <span>{{ ingredient.amount  }}</span> -
     <strong>{{ ingredient.name }}</strong>
   </li>
 </ul>
