Inclusão do componente add-ingredient

--- a/ngrx-shopping-list/src/app/app.component.html
+++ b/ngrx-shopping-list/src/app/app.component.html
@@ -6,6 +6,10 @@
     </div>
 
     <div class="col-12">
+      <app-add-ingredient></app-add-ingredient>
+    </div>
+
+    <div class="col-12">
       <app-shopping-list
       [ingredients]="ingredients"></app-shopping-list>
     </div>
