Formatação de campos com Classes de CSS do BootStrap

--- a/ngrx-shopping-list/src/app/shopping-list/shopping-list.component.html
+++ b/ngrx-shopping-list/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,7 @@
-<ul>
-  <li *ngFor="let ingredient of ingredients">
+<ul class="mt-3">
+  <li *ngFor="let ingredient of ingredients" class="mt-2">
     <span>{{ ingredient.amount  }}</span> -
     <strong>{{ ingredient.name }}</strong>
+    <button class="btn btn-sm btn-danger sm-2"> Remover</button>
   </li>
 </ul>
