--- a/ngrx-shopping-list/src/app/add-ingredient/add-ingredient.component.html
+++ b/ngrx-shopping-list/src/app/add-ingredient/add-ingredient.component.html
@@ -1,7 +1,10 @@
-<form class="row row-cols-auto g-3 align-itens-center">
-  <div class="col-12">
-    <label class="visually-hiden" for="item">Item</label>
-    <input type="text" class="form-control" id="item">
+<form class="row row-cols-lg-auto g-3 align-itens-center">
+  <div class="col-6">
+    <input type="text" class="form-control" id="name" placeholder="Ingredient">
+  </div>
+
+  <div class="col-6">
+    <input type="text" size="3" class="form-control" id="amount" placeholder="Amount">
   </div>
 
   <div class="col-12">
